--- a/archiwum/lokalnie.26.07.25.Festiwal Kina Plenerowego w Sopocie.html
+++ b/archiwum/lokalnie.26.07.25.Festiwal Kina Plenerowego w Sopocie.html
@@ -58,10 +58,18 @@
                 </li>
                 <li> <a href="../de/chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>
-                <li><a href="../lm.html">LUMEN MUNDI</a></li>
-                <li><a href="../west.html">Z ZACHODU</a></li>
-                <li><a href="../fin.html">GDAŃSKI PORTFEL</a></li>
-                <li><a href="../pixel.html">PIXEL & PLOT: SPRAWDZIMY TO?</a></li>
+                <li>
+                    <a href="../lm.html">LUMEN MUNDI</a>
+                </li>
+                <li>
+                    <a href="../west.html">Z ZACHODU</a>
+                </li>
+                <li>
+                    <a href="../fin.html">GDAŃSKI PORTFEL</a>
+                </li>
+                <li>
+                    <a href="../pixel.html">PIXEL & PLOT: SPRAWDZIMY TO?</a>
+                </li>
             </ul>
         </div>
         <div class="mobile-top-gadgets-container">
@@ -73,10 +81,10 @@
         <div class="main-layout-wrapper">
             <div class="main-content">
                 <div class="ads google article-top-ad">
-                    </div>
+</div>
                 <h1 class="article-title" style="">Festiwal Kina Plenerowego w Sopocie – morze, ekran i leżaki.</h1>
                 <p class="lead" style="">W letnie wieczory, kiedy molo pustoszeje z dziennych turystów, a fale zaczynają mówić ciszej, Plac Przyjaciót Sopotu zamienia się w coś więcej niż deptak – w kino pod gołym niebem.</p>
-                <p class="author-date">Autor: Jan Kowalski | Data publikacji: 26 lipca 2025</p>
+                <p class="author-date">Autor:&nbsp;Emil Racht | Data publikacji: 26 lipca 2025</p>
                 <img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/fb2PKfyt/kino809535.jpg?text=Duży+Obraz+Artykułu"/>
                 <p class="image-caption">To jest podpis pod obrazem, krótki i opisowy.</p>
                 <div class="article-body">
@@ -99,15 +107,8 @@ Letnie kino plenerowe to jeden z najciekawszych sposobów na wieczór w Sopocie 
 Jeśli szukasz innych pomysłów na relaks – sprawdź także naszą propozycję jednodniowej trasy kaszubskiej w dziale „Dobrze na dziś”.
 Chcesz zostać na dłużej? Sprawdź noclegi w pobliżu Placu Przyjaciół Sopotu – apartamenty z widokiem na morze dostępne już od 180 zł za noc.</p>
                 </div>
-                
-<div class="article-actions">
-    <a href="../index.html" role="button" style="font-weight: 400;">Start page</a>
-    <a href="../comments.html" role="button" style="font-weight: 400;">Comment</a>
-    <a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">Share</a>
-    <a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">Copy link</a>
-    <a href="#" onclick="window.print()" role="button" style="font-weight: 400;">Print</a>
-</div>
-
+                <div class="article-actions"><a href="../index.html" role="button" style="font-weight: 400;">Start page</a><a href="../comments.html" role="button" style="font-weight: 400;">Comment</a><a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">Share</a><a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">Copy link</a><a href="#" onclick="window.print()" role="button" style="font-weight: 400;">Print</a>
+                </div>
                 <div class="section-separator"></div>
                 <div class="editorial-info">
                     <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="../kontakt.html">Skontaktuj się z nami</a>
