--- a/lokalnie.html
+++ b/lokalnie.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-        <title>GDAŃSKI REPORTER – Pixel &amp; Plot</title>
+        <title>GDAŃSKI REPORTER – LOKALNIE</title>
         <meta content="Opis artykułu na stronie sekcji." name="description"/>
         <link href="https://fonts.googleapis.com" rel="preconnect"/>
         <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
