--- a/dobrze.html
+++ b/dobrze.html
@@ -1,28 +1,27 @@
-<!DOCTYPE html> 
-<html lang="pl" style=""> 
-    <head> 
-        <meta charset="utf-8"/> 
-        <meta content="width=device-width, initial-scale=1.0" name="viewport"/> 
+<!DOCTYPE html>
+<html lang="pl" style=""><head> 
+        <meta charset="utf-8"> 
+        <meta content="width=device-width, initial-scale=1.0" name="viewport"> 
         <title>GDAŃSKI REPORTER  – Kaszubska jednodniówka</title>         
-        <meta content="Opis artykułu na stronie sekcji." name="description"/> 
-        <link href="https://fonts.googleapis.com" rel="preconnect"/> 
-        <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/> 
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet"/> 
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&amp;display=swap" rel="stylesheet"/> 
-        <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&amp;display=swap" rel="stylesheet"/> 
-        <link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&amp;display=swap" rel="stylesheet"/> 
-        <link href="css/theme.css" rel="stylesheet" type="text/css"/> 
-        <link href="css/section.css" rel="stylesheet" type="text/css"/> 
+        <meta content="Opis artykułu na stronie sekcji." name="description"> 
+        <link href="https://fonts.googleapis.com" rel="preconnect"> 
+        <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"> 
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&amp;display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&amp;display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&amp;display=swap" rel="stylesheet"> 
+        <link href="css/theme.css" rel="stylesheet" type="text/css"> 
+        <link href="css/section.css" rel="stylesheet" type="text/css"> 
         <link rel="stylesheet" href="css/cookie-bar.css">
     </head>     
     <body> 
         <header> 
             <button id="menu-toggle">☰</button>             
             <button id="search-toggle"> 
-                <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"> 
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"> 
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>                     
                 </svg>                 
-            </button>             <a class="header-link" href="index.html"> <h1 style="">GDAŃSKI <img alt="Logo Danziger Report" src="images/danzigerschwan.jpg"/> REPORTER</h1> </a> 
+            </button>             <a class="header-link" href="index.html"> <h1 style="">GDAŃSKI <img alt="Logo Danziger Report" src="images/danzigerschwan.jpg"> REPORTER</h1> </a> 
         </header>         
         <nav class="main-nav"> 
             <ul> 
@@ -65,7 +64,7 @@
                 </li>                 
                 <li><a href="fin.html">GDAŃSKI PORTFEL</a>
                 </li>                 
-                <li><a href="pixel.html">PIXEL & PLOT: SPRAWDZIMY TO?</a>
+                <li><a href="pixel.html">PIXEL &amp; PLOT: SPRAWDZIMY TO?</a>
                 </li>                 
             </ul>             
         </div>         
@@ -82,23 +81,23 @@
                 <h1 class="article-title" style="">Kaszubska jednodniówka – smak, widok, powietrze.</h1> 
                 <p class="lead" style="">Są takie dni w środku sezonu, kiedy trzeba uciec z linii frontu turystycznego.</p> 
                 <p class="author-date">Autor:&nbsp;Emil Racht | Data publikacji: 30 lipca 2025</p> 
-                <img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/Gm3z5TZk/kaszuby-szymbark-810535.jpg?text=Duży+Obraz+Artykułu"/> 
+                <img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/Gm3z5TZk/kaszuby-szymbark-810535.jpg?text=Duży+Obraz+Artykułu"> 
                 <p class="image-caption">Foto:&nbsp;Emil Racht</p> 
-                <div class="article-body"> 
+                <div class="article-body" data-article-id="300725"> 
                     <p style="">Są takie dni w środku sezonu, kiedy trzeba uciec z linii frontu turystycznego. Zostawić Długi Targ, Molo i kolejki do zapiekanek – i pojechać w głąb. Proponujemy: jednodniowy wypad na Kaszuby. Bez wielkich walizek, bez bookingów, tylko z plecakiem, mapą i głodem. Start: Gdańsk Zachodni (przystanek Łostowice Świętokrzyska).    Autobus w kierunku Kościerzyny, najlepiej wsiąść ok. 7:30. Wysiąść w Szymbarku lub Gołubiu.</p> 
                     <p>Wieża Widokowa na Wieżycy.
    Wędrówka przez las zajmie niecałą godzinę. Na górze – stalowa konstrukcja z panoramą całych Kaszub. Przy dobrej pogodzie widać nawet wieżowce Gdańska.</p> 
-                    <p> Obiad: Zajazd „Pod Wieżycą”.
+                    <p>&nbsp;Obiad: Zajazd „Pod Wieżycą”.
    Tam nie pytają, czy zupa ma być mała czy duża. Czernina, kiszka ziemniaczana, karkówka w majeranku, do tego kompot z rabarbaru i chleb z domowego wypieku. Płacisz gotówką, ale nie żałujesz.</p> 
                     <p>Popołudnie: Chmielno – ceramika i jezioro.  
    Przejazd do Chmielna (PKS lub pieszo, jeśli siły pozwolą). W Muzeum Ceramiki Neclów można samodzielnie ulepić filiżankę lub garnek. Po zajęciach – spacer nad Jeziorem Białym.</p> 
-                    <p> Kolacja: karczma „Skarbnik” w Kościerzynie.  
+                    <p>&nbsp;Kolacja: karczma „Skarbnik” w Kościerzynie.  
    Prawdziwe kołduny kaszubskie, śledź w śmietanie, pierogi z pokrzywą. Na koniec – nalewka z jeżyn podawana w kieliszku do jajka. Uwaga: nie prowadź po tym.</p> 
                     <p>Powrót.   
    Ostatni autobus do Gdańska o 20:10 (sprawdź rozkład). Droga powrotna przez pola i światła Trójmiasta – cisza po gwarze.
 Nie trzeba rezerwacji, nie trzeba aplikacji.  
-Wystarczy chcieć oddychać inaczej – i zjeść coś, co nie było zamrożone w styczniu.  </p> 
-                    <p> INFORMACJE PRAKTYCZNE
+Wystarczy chcieć oddychać inaczej – i zjeść coś, co nie było zamrożone w styczniu.&nbsp; </p> 
+                    <p>&nbsp;INFORMACJE PRAKTYCZNE
 – Dojazd: z Gdańska Głównego pociągiem SKM lub REGIO do Kościerzyny (ok. 1h 40 min), koszt biletu ok. 15 zł  
 – Alternatywnie: autobus linii PKS przez Żukowo, Szymbark, Gołubie  
 – Wędrówka: na Wieżycę od przystanku to ok. 45 minut piechotą  
@@ -169,5 +168,22 @@ Jeśli planujesz dłuższy wypad – sprawdź też noclegi w okolicach Wieżycy 
 
     // Weather Widget Script - REMOVED AS IT'S NOW IN wetter.html
   </script>         
-    </body>     
-</html>
+         
+<!-- redirect_script_by_editor --><script>
+                        (function(){
+                            try {
+                                const urlParams = new URLSearchParams(window.location.search);
+                                const articleId = urlParams.get('id');
+                                if (!articleId) return;
+                                const currentArticle = document.querySelector('[data-article-id="' + articleId + '"]');
+                                if (!currentArticle) {
+                                    const archiveMap = { "300725": "archiwum/dobrze.30.07.25.kaszubska-jednostka.html" };
+                                    if (archiveMap[articleId]) {
+                                        window.location.href = "/" + archiveMap[articleId];
+                                    }
+                                }
+                            } catch(e) {
+                                console.error('Redirect script error', e);
+                            }
+                        })();
+                        </script></body></html>
