--- a/index.html
+++ b/index.html
@@ -150,9 +150,7 @@ Start: Gdańsk Zachodni (przystanek Łostowice Świętokrzyska).    Autobus w ki
        Historia Kościoła katolickiego, a w szczególności Diecezji Gdańskiej, jest odzwierciedleniem losów miasta — od 1925 roku, przez wojenne zniszczenia i czasy komunizmu, aż po współczesność. </p><img alt="Biskup Edward O’Rourke w Gdańsku" src="https://i.postimg.cc/yNSVJmzB/Edward.jpg"/></a>
                 </section>
                 <section class="article" id="z-zachodu"> <a href="west.html"><h2> 
-       Z ZACHODU </h2><p><b> 
-        Tydzień na Granicach i w Cieniu Praworządności czyli „Pogranicze w ogniu”. </b> 
-       W "GR" wierzymy, że zrozumienie teraźniejszości wymaga spojrzenia z różnych perspektyw. Rubryka "Z Zachodu" to okno na to, jak Polska jest postrzegana przez media naszych sąsiadów – nie tylko przez pryzmat faktów, but i emocji, jakie towarzyszą politycznym napięciom w regionie. </p><img alt="Zachodnia prasa i komentarze" src="https://i.postimg.cc/zvjGbYVm/pogranicze-w-ogniu.png"/></a>
+       Z ZACHODU </h2><p><b>Poniżej zamieszczamy tłumaczenie oryginalnego artykułu z niemieckiego dziennika &bdquo;Frankfurter Allgemeine Zeitung&rdquo;. </b>Niemiecka wizja wystawy w Gdańsku: Polscy żołnierze Hitlera.&nbsp;&nbsp;Po okupacji Polski, Wehrmacht wcielił setki tysięcy Polaków. Wystawa w Gdańsku upamiętnia ich los...</p><img alt="Zachodnia prasa i komentarze" src="https://i.ibb.co/7xKYkKKC/FAZ-0508.png"/></a>
                 </section>
                 <section class="article" id="gdanski-portfel"> <a href="fin.html"><h2> 
        GDAŃSKI PORTFEL </h2><p><b> 
