--- a/west.html
+++ b/west.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <title>
-            GDAŃSKI REPORTER – Pogranicze w ogniu
+            GDAŃSKI REPORTER – Niemiecka wizja wystawy w Gdańsku
 </title>
         <meta content="Opis artykułu na stronie sekcji." name="description">
         <link href="https://fonts.googleapis.com" rel="preconnect">
