--- a/kontakt.html
+++ b/kontakt.html
@@ -1,220 +1,77 @@
-<!DOCTYPE html> 
-<html lang="pl"> 
-    <head> 
-        <meta charset="utf-8"/> 
-        <meta content="width=device-width, initial-scale=1.0" name="viewport"/> 
-        <title>Danziger Chronograf – Tytuł Artykułu</title>         
-        <meta content="Opis artykułu na stronie sekcji." name="description"/> 
-        <link href="https://fonts.googleapis.com" rel="preconnect"/> 
-        <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/> 
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet"/> 
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&amp;display=swap" rel="stylesheet"/> 
-        <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&amp;display=swap" rel="stylesheet"/> 
-        <link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&amp;display=swap" rel="stylesheet"/> 
-        <link href="css/theme.css" rel="stylesheet" type="text/css"/> 
-        <link href="css/section.css" rel="stylesheet" type="text/css"/> 
-        <style>.freesupport-container { max-width: 800px; margin: 100px auto; padding: 2rem; background-color: #f5f5f5; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1); text-align: center; } .freesupport-container h1 { font-size: 2rem; margin-bottom: 2rem; } .support-buttons { display: flex; flex-direction: column; gap: 1.5rem; } .support-buttons a { display: inline-block; padding: 1rem 1.5rem; font-size: 1.1rem; text-decoration: none; border-radius: 8px; background-color: #333; color: white; transition: background-color 0.2s ease; } .support-buttons a:hover { background-color: #555; } .support-buttons span { display: block; font-size: 0.9rem; margin-top: 0.2rem; color: #ccc; } @media (min-width: 600px) { .support-buttons {  flex-direction: row;  justify-content: space-around; }  .support-buttons a {  width: 30%; } }
-        /* Style dla formularza kontaktowego */
-        .contact-form-container {
-            max-width: 600px;
-            margin: 60px auto;
-            padding: 20px;
-            background: #fdfdfd;
-            color: #222;
-        }
-        .contact-form-container h1 {
-            font-size: 28px;
-            margin-bottom: 20px;
-            font-family: 'UnifrakturMaguntia', cursive;
-        }
-        .contact-form-container label {
-            display: block;
-            margin: 20px 0 10px;
-            font-weight: bold;
-        }
-        .contact-form-container input, .contact-form-container textarea {
-            width: 100%;
-            padding: 10px;
-            font-family: inherit;
-            font-size: 16px;
-            border: 1px solid #ccc;
-        }
-        .contact-form-container textarea {
-            height: 160px;
-        }
-        .contact-form-container button {
-            margin-top: 20px;
-            padding: 10px 30px;
-            font-size: 16px;
-            font-weight: bold;
-            cursor: pointer;
-            background: #000;
-            color: #fff;
-            border: none;
-        }
-        </style>         
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT&display=swap">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=UnifrakturMaguntia&display=swap">
-        <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    </head>     
-    <body> 
-        <header> 
-            <button id="menu-toggle">☰</button>             
-            <button id="search-toggle"> 
-                <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"> 
-                    <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>                     
-                </svg>                 
-            </button>             <a class="header-link" href="index.html"><h1 style="text-transform: uppercase; "> GDAŃSKI <img alt="Logo Danziger Report" src="images/danzigerschwan.jpg"/> REPORTER </h1></a> 
-        </header>         
-        <nav class="main-nav"> 
-            <ul> 
-                <li> <a href="stand.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">STANDPUNKT</a> 
-                </li>                 
-                <li> <a href="prawo.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">PRAWO</a> 
-                </li>                 
-                <li> <a href="lokalnie.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">LOKALNIE</a> 
-                </li>                 
-                <li> <a href="dobrze.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DOBRZE NA DZIŚ</a> 
-                </li>                 
-                <li> <a href="notpl.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">OBYWATELE NIE PL</a> 
-                </li>                 
-                <li> <a href="kartka.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">KARTKA Z HISTORII</a> 
-                </li>                 
-                <li> <a href="de/chronograf.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DANZIGER CHRONOGRAF</a> 
-                </li>                 
-            </ul>             
-        </nav>         
-        <div id="menu-overlay"></div>         
-        <div id="offcanvas-menu"> 
-            <ul> 
-                <li> <a href="stand.html">STANDPUNKT</a> 
-                </li>                 
-                <li> <a href="prawo.html">PRAWO</a> 
-                </li>                 
-                <li> <a href="lokalnie.html">LOKALNIE</a> 
-                </li>                 
-                <li> <a href="dobrze.html">DOBRZE NA DZIŚ</a> 
-                </li>                 
-                <li> <a href="notpl.html">OBYWATELE NIE PL</a> 
-                </li>                 
-                <li> <a href="kartka.html">KARTKA Z HISTORII</a> 
-                </li>                 
-                <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
-                </li>                 
-                <li>
-                    <a href="lm.html">LUMEN MUNDI</a>
-                </li>                 
-                <li>
-                    <a href="west.html">Z ZACHODU</a>
-                </li>                 
-                <li>
-                    <a href="fin.html">GDAŃSKI PORTFEL</a>
-                </li>                 
-                <li>
-                    <a href="pixel.html">PIXEL & PLOT: SPRAWDZIMY TO?</a>
-                </li>                 
-            </ul>             
-        </div>         
-        <div class="mobile-top-gadgets-container"> 
-            <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock"> 
-</iframe>             
-            <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar"> 
-</iframe>             
-        </div>         
-        <div class="main-layout-wrapper"> 
-            <div class="main-content"> 
-                <div class="ads google article-top-ad"> 
-</div>                 
-                <div class="contact-form-container">
-                    <h1>Contact the Danziger Reporter</h1> 
-                    <form id="contact-form"> 
-                        <label style="font-family: 'Old Standard TT', serif; font-size: 18px;">Name:
-                            <input type="text" name="name" required> 
-                        </label>                     
-                        <label style="font-family: 'Old Standard TT', serif; font-size: 18px;">Email address:
-                            <input type="email" name="email" required> 
-                        </label>                     
-                        <label style="font-family: 'Old Standard TT', serif; font-size: 18px;">Message:
-                            <textarea name="message" required style="font-family: 'Old Standard TT', serif; font-size: 18px;"></textarea> 
-                        </label>                     
-                        <button type="submit">Send</button>                     
-                    </form>
-                </div>                 
-                <div class="section-separator"></div>                 
-                <div class="editorial-info"> 
-                    <p style="font-family: 'Old Standard TT', serif;"><b>DANZIGER REPORTER. Nebelgasse 12, Niederstadt, Danzig</b></p> <a class="contact-btn" href="kontakt.html">KONTAKT</a> 
-                </div>                 
-            </div>             
-            <div class="vertical-strip"></div>             
-            <aside class="sidebar kontener-szary desktop-sidebar"> 
-                <div class="clock-calendar-row"> 
-                    <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock"> 
-</iframe>                     
-                    <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar"> 
-</iframe>                     
-                </div>                 
-                <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>                 
-                <div class="ads google sidebar-bottom-ad"> 
-                    <p>Reklama Google (na dole sidebara)</p> 
-                </div>                 
-            </aside>             
-        </div>         
-        <div class="mobile-bottom-gadgets-container"> 
-            <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>             
-            <div class="support-newsletter-section"> 
-                <iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"> 
-</iframe>                 
-            </div>             
-            <div class="ads google sidebar-bottom-ad"> 
-                <p>Reklama Google (na dole sidebara)</p> 
-            </div>             
-        </div>         
-        <footer> 
-</footer>         
-        <script>
-    // Offcanvas menu script
-    const toggle = document.getElementById('menu-toggle');
-    const menu   = document.getElementById('offcanvas-menu');
-    const overlay= document.getElementById('menu-overlay');
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>Danziger Chronograf – Kontakt</title>
+    <meta content="Opis artykułu na stronie sekcji." name="description"/>
+    <link href="https://fonts.googleapis.com" rel="preconnect"/>
+    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&display=swap" rel="stylesheet"/>
+    <link href="css/theme.css" rel="stylesheet" type="text/css"/>
+    <link href="css/section.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=UnifrakturMaguntia&display=swap">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <style>
+    .contact-form-container { max-width: 600px; margin: 60px auto; padding: 20px; background: #fdfdfd; color: #222; }
+    .contact-form-container h1 { font-size: 28px; margin-bottom: 20px; font-family: 'UnifrakturMaguntia', cursive; }
+    .contact-form-container label { display: block; margin: 20px 0 10px; font-weight: bold; }
+    .contact-form-container input, .contact-form-container textarea { width: 100%; padding: 10px; font-family: inherit; font-size: 16px; border: 1px solid #ccc; }
+    .contact-form-container textarea { height: 160px; }
+    .contact-form-container button { margin-top: 20px; padding: 10px 30px; font-size: 16px; font-weight: bold; cursor: pointer; background: #000; color: #fff; border: none; }
+    #contact-message { display:none; padding:10px; margin-top:15px; border-radius:5px; font-size: 14px; }
+    </style>
+</head>
+<body>
+    <div class="contact-form-container">
+        <h1>Contact the Danziger Reporter</h1>
+        <form id="contact-form">
+            <label>Name:
+                <input type="text" name="name" required>
+            </label>
+            <label>Email address:
+                <input type="email" name="email" required>
+            </label>
+            <label>Message:
+                <textarea name="message" required></textarea>
+            </label>
+            <button type="submit">Send</button>
+        </form>
+        <div id="contact-message"></div>
+    </div>
 
-    // Function to toggle menu and overlay
-    function toggleMenu() {
-      menu.classList.toggle('open');
-      overlay.classList.toggle('open');
-      document.body.style.overflow = menu.classList.contains('open') ? 'hidden' : 'auto';
-    }
+<script>
+(function(){
+  emailjs.init("V1Y1iYAOdCryvAzJc"); // Nowy public key
+})();
 
-    // Event listeners for menu toggle and overlay click
-    if (toggle) {
-      toggle.addEventListener('click', toggleMenu);
-    }
-    if (overlay) {
-      overlay.addEventListener('click', toggleMenu);
-    }
+document.getElementById('contact-form').addEventListener('submit', function(event) {
+  event.preventDefault();
+  const messageBox = document.getElementById('contact-message');
+  messageBox.style.display = 'none';
 
-    // Initialize Email.js with your public key.
-    // Replace "PGsn7ZkHeptD5mWTv" with your actual Email.js user ID.
-    (function(){
-      emailjs.init("PGsn7ZkHeptD5mWTv");
-    })();
-
-    document.getElementById('contact-form').addEventListener('submit', function(event) {
-      event.preventDefault();
-
-      // Send the form using Email.js.
-      // Replace "service_vvvc6l7" and "template_8i490ih" with your actual service and template IDs.
-      emailjs.sendForm('service_vvvc6l7', 'template_8i490ih', this)
-        .then(function() {
-          // Redirect to the thank you page on success.
-          // The path has been updated to be relative, assuming both files are in the same directory.
-          window.location.href = "thank-you.html";
-        }, function(error) {
-          // Display an error message on failure.
-          const errorMessage = "Failed to send the message: " + JSON.stringify(error);
-          console.error(errorMessage);
-          // Consider using a custom modal or message box for a production application.
-        });
+  emailjs.sendForm('service_vvvc6l7', 'template_8i490ih', this)
+    .then(function(response) {
+      console.log("Sukces:", response);
+      messageBox.style.background = '#d4edda';
+      messageBox.style.color = '#155724';
+      messageBox.innerHTML = "✅ Wiadomość została wysłana!";
+      messageBox.style.display = 'block';
+      setTimeout(() => {
+        window.location.href = "thank-you.html";
+      }, 3000);
+    }, function(error) {
+      console.error("Błąd:", error);
+      messageBox.style.background = '#f8d7da';
+      messageBox.style.color = '#721c24';
+      messageBox.innerHTML = "❌ Błąd wysyłki: " + (error.text || JSON.stringify(error));
+      messageBox.style.display = 'block';
     });
-  </script>         
-    </body>     
+});
+</script>
+</body>
 </html>
